--- a/ExploreHttp/MainWindow.xaml
+++ b/ExploreHttp/MainWindow.xaml
@@ -84,7 +84,7 @@
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center"
                                                Margin="4,0,4,0"/>
-                                    <Button HorizontalAlignment="Center" VerticalAlignment="Center" Click="NewRequest_Click">
+                                    <Button HorizontalAlignment="Center" VerticalAlignment="Center" Click="CloseRequest_Click">
                                         <TextBlock Text="" Style="{StaticResource Icons}" FontSize="12"/>
                                     </Button>
                                 </StackPanel>
