--- a/ExploreHttp/MainWindow.xaml
+++ b/ExploreHttp/MainWindow.xaml
@@ -31,20 +31,20 @@
             <ToolBar>
                 <Button Click="NewCollection_Click">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
+                        <TextBlock Text="{StaticResource AddFolderIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
                         <TextBlock Text="New collection" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
                 <Separator/>
                 <Button Click="OpenSettings_Click">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
+                        <TextBlock Text="{StaticResource SettingsIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
                         <TextBlock Text="Settings" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
                 <Button Click="About_Click">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
+                        <TextBlock Text="{StaticResource InfoIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
                         <TextBlock Text="About" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
@@ -75,7 +75,7 @@
                         <Setter.Value>
                             <DataTemplate DataType="vm:RequestModel">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="✱"
+                                    <TextBlock Text="{StaticResource PendingChangesIcon}"
                                                Style="{StaticResource Icons}"
                                                Visibility="{Binding UnsavedChangesIndicatorVisibility}"
                                                HorizontalAlignment="Center"
@@ -85,7 +85,7 @@
                                                VerticalAlignment="Center"
                                                Margin="4,0,4,0"/>
                                     <Button HorizontalAlignment="Center" VerticalAlignment="Center" Click="CloseRequest_Click">
-                                        <TextBlock Text="" Style="{StaticResource Icons}" FontSize="12"/>
+                                        <TextBlock Text="{StaticResource CloseIcon}" Style="{StaticResource Icons}" FontSize="12"/>
                                     </Button>
                                 </StackPanel>
                             </DataTemplate>
