--- a/ExploreHttp/RequestControl.xaml
+++ b/ExploreHttp/RequestControl.xaml
@@ -37,7 +37,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{Binding Source}"/>
                 <Button Grid.Column="1">
-                    <TextBlock Text="" Style="{StaticResource Icons}"/>
+                    <TextBlock Text="{StaticResource ElipsisIcon}" Style="{StaticResource Icons}"/>
                 </Button>
             </Grid>
         </DataTemplate>
@@ -66,7 +66,7 @@
                 <local:TextBoxWithPlaceholder Text="{Binding Url}" Placeholder="Url" Grid.Column="1" Height="24" VerticalAlignment="Center"/>
                 <Button Height="24" Grid.Column="2" VerticalAlignment="Center">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="" Style="{StaticResource Icons}" Margin="0,0,2,0" VerticalAlignment="Center"/>
+                        <TextBlock Text="{StaticResource RunIcon}" Style="{StaticResource Icons}" Margin="0,0,2,0" VerticalAlignment="Center"/>
                         <TextBlock Text="Run" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
