--- a/ExploreHttp/RequestCollectionControl.xaml
+++ b/ExploreHttp/RequestCollectionControl.xaml
@@ -28,6 +28,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="32"/>
+                    <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="28"/>
                 </Grid.ColumnDefinitions>
                 <Button Click="Toggle_Click">
@@ -41,6 +42,7 @@
                            Style="{StaticResource Icons}"
                            Margin="0,0,4,0"
                            HorizontalAlignment="Center"
+                           ToolTip="There are unsaved changes"
                            Visibility="{Binding UnsavedChangesIndicatorVisibility}"/>
                 <TextBlock Text="{Binding CollectionName}"
                            d:Text="Example collection"
@@ -53,18 +55,24 @@
                           d:SelectedIndex="1"
                           Grid.Column="3"
                           VerticalAlignment="Center"
-                          Margin="0,0,4,0">
+                          Margin="0,0,4,0"
+                          ToolTip="Active Environment">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Name}"/>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <Button Grid.Column="4" Margin="0,0,4,0">
+                <Button Grid.Column="4" Margin="0,0,4,0" ToolTip="New Request">
                     <TextBlock Text="{StaticResource FileIcon}" Style="{StaticResource Icons}"/>
                 </Button>
-                <Button Grid.Column="5">
+                <Button Grid.Column="5" Margin="0,0,4,0" ToolTip="Collection Settings">
                     <TextBlock Text="{StaticResource EditIcon}"
+                               Style="{StaticResource Icons}"
+                               FontSize="12"/>
+                </Button>
+                <Button Grid.Column="6" ToolTip="Save Changes">
+                    <TextBlock Text="{StaticResource SaveIcon}"
                                Style="{StaticResource Icons}"
                                FontSize="12"/>
                 </Button>
