--- a/ExploreHttp/CollectionEditorWindow.xaml
+++ b/ExploreHttp/CollectionEditorWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ExploreHttp"
         xmlns:vm="clr-namespace:ExploreHttp.Models"
         mc:Ignorable="d"
-        Title="New Collection"
+        Title="Explore HTTP - New Collection"
         Height="350"
         Width="550"
         WindowStartupLocation="CenterOwner"
